--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,15 @@
 numpy
 opencv-python-headless
-import tensorflow as tf 
-import network
-import guided_filter
-from cv2 import dnn_superres
-import streamlit as st
-from PIL import Image,ImageEnhance
-import time
-import numpy as np
-import os
-import os.path
-import random
-import string
-from datetime import datetime
-import base64
-from moviepy.editor import *
-import threading
-import tensorflow.contrib.slim as slim
+tensorflow
+streamlit
+PIL
+time
+os
+os.path
+random
+string
+datetime
+base64
+moviepy.editor
+threading
+tensorflow.contrib.slim
